la til ikoner i mappen

--- a/skills.html
+++ b/skills.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles/port2.css">
     <title>Skills</title>
     <link rel="icon" href="img/logo.png" type="image/x-icon"/>
+    <link rel="stylesheet" href="styles/skills.css">
 </head>
 <body>
 
