--- a/PreviousWork.html
+++ b/PreviousWork.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/port2.css">
-    <title>About me</title>
+    <title>Previous work</title>
     <link rel="icon" href="img/logo.png" type="image/x-icon"/>
     <link rel="stylesheet" href="styles/aboutme.css">
 </head>
@@ -18,8 +18,11 @@
     </section>
 
     <section id="text" class="text-box">
-        <p id="hvasomhelst">placeholder text</p>
-        <img src="" alt="" class="selvpotet"> 
+        <p id="previous-work-text">I mine tre nylige prosjekter har jeg utforsket ulike designaspekter. Først skapte jeg en engasjerende logo for en nettbutikk ved hjelp av Photoshop, fokusert på å formidle merkeidentiteten tydelig. Deretter skapte jeg en personlig avatar i Illustrator, der jeg utforsket detaljene i min egen digital representasjon. Til slutt, skapte jeg en realistisk mockup av en genser med et unikt design for nettbutikken, hvor jeg kombinerte estetikk og funksjonalitet for å skape en visuell appell. Disse prosjektene reflekterer min allsidighet innen grafisk design og min evne til å tilpasse meg ulike kreative utfordringer.</p>
+        <img src="img/GHOST TOUCH HOODIE!.png" alt="" class="selvpotet"> 
+        <img src="img/avatar - Noah.png" alt="" class="selvpotet"> 
+        <img src="img/web design.png" alt="" class="selvpotet"> 
+        
         
     </section>
 
