--- a/contactme.html
+++ b/contactme.html
@@ -7,15 +7,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/port2.css">
-    <title>About me</title>
+    <title>Contact me</title>
     <link rel="icon" href="img/logo.png" type="image/x-icon"/>
     <link rel="stylesheet" href="styles/contactme.css">
 </head>
 <body>
 
+    
     <section id="logo">
-        <a href="/port2.html"><img width="300px" src="img/logo.png" alt=""></a>
+        <a href="/port2.html" class="logo-link"><img width="300px" id="logo-image" src="img/logo.png" alt=""></a>
     </section>
+
+
     
     <section id="text" class="text-box">
         <p id="hvasomhelst">Mail: noah200725@gmail.com</p>
