--- a/aboutme.html
+++ b/aboutme.html
@@ -13,8 +13,9 @@
 </head>
 <body>
 
+    
     <section id="logo">
-        <a href="/port2.html"><img width="300px" src="img/logo.png" alt="Logo"></a>
+        <a href="/port2.html" class="logo-link"><img width="300px" id="logo-image" src="img/logo.png" alt=""></a>
     </section>
     
     <section id="text" class="text-box">
