--- a/education.html
+++ b/education.html
@@ -12,11 +12,12 @@
     <link rel="icon" href="img/logo.png" type="image/x-icon" />
 </head>
 
+
 <body>
     <section id="logo">
-        <a href="/port2.html"><img width="300px" src="img/logo.png" alt=""></a>
+        <a href="/port2.html" class="logo-link"><img width="300px" id="logo-image" src="img/logo.png" alt=""></a>
     </section>
-
+   
     <footer>
         Created by Noah Halvorsen | © 2024
     </footer>
