--- a/port2.html
+++ b/port2.html
@@ -13,7 +13,7 @@
 <body>
 
     <section id="logo">
-        <img width="300px" src="img/logo.png" alt="">
+        <a href="/port2.html" class="logo-link"><img width="300px" id="logo-image" src="img/logo.png" alt=""></a>
     </section>
    
     <div class="links">
