--- a/PreviousWork.html
+++ b/PreviousWork.html
@@ -14,7 +14,7 @@
 <body>
 
     <section id="logo">
-        <a href="/port2.html"><img width="300px" src="img/logo.png" alt=""></a>
+        <a href="/port2.html" class="logo-link"><img width="300px" id="logo-image" src="img/logo.png" alt=""></a>
     </section>
 
     <section id="text" class="text-box">
